Change a small part of events to is_triggered_only as a showcase

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -202,9 +202,9 @@ worldnews.27.f:0 "Chairman Horner represents stability and competence."
 worldnews.28.t:0 "Edward VIII crowned as King of Britain"
 worldnews.28.d:0 "George V, the last King of Great Britain and Ireland to have ruled the Home Isles themselves, has passed while in exile in Canada. The first Windsor King, his reign shall be remembered with sorrow and sadness, as during it Britain lost both the Weltkrieg and its homeland. The crown was inherited by Edward, Prince of Wales, who now stylises himself as Edward VIII. \n\nKing Edward is a vengeful and ambitious man, and not on good terms with Prime Minister Mackenzie King. He lives on the goal of avenging his father and reconquering the British Isles, and thus is quite popular among the British exiles in Canada, among others."
 worldnews.28.a:0 "Our sincere congratulations to King Edward VIII."
-worldnews.28.b:0 "Another monarch is sworn in to oppress the people."
+worldnews.28.b:0 "Another monarch is sworn in to oppress the British people."
 worldnews.28.c:0 "He is no king over the British, and we will have his head!"
-worldnews.28.e:0 "Long live King Edward VII, king of the British Empire!"
+worldnews.28.e:0 "Long live King Edward VII, King of the British Empire!"
 
 worldnews.29.t:0 "French Loyalists Restore Monarchy"
 worldnews.29.d:0 "After a brief French Civil War, the old government of France and its supporters fled to North Africa to escape Syndicalist wrath. There, the nation eventually devolved into a military junta under the Lion of Verdun, Philippe Petain. However, a big question arose in this defeated nation, what should its future be? Retaking France is the priority, yes, but what should be the government?\n\nIt appears that the French have answered the question themselves, though, as the National French State has accepted an agreement to restore the monarchy in France."
