Move and polish Indochinese World News

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -648,6 +648,30 @@ worldnews.90.c:0 "Why don't the British people revolt? We will give them the lea
 worldnews.90.e:0 "Tom Mann will lead us for the time being. What an absolute disaster."
 worldnews.90.f:0 "We will vote again in one year. Great, nothing done for one year."
 
+worldnews.91.t:0 "Revolt in Indochina"
+worldnews.91.d:0 "Today, local Indochinese garrisons from Cochinchina to Tonkin have begun an armed uprising against the German colonial officials. Aided by revolutionaries and volunteers from the Bharatiya Commune, they pose a grave danger towards the future of German Indochina and the stability of the Southeast Asia region as a whole.\n\nThe reaction of the German Foreign Office is still awaited, but the Indochinese rebels are not waiting for their word to start conquering land. As such, it is expected that Germany will either confirm their status of war, or give up their entire colony, which would certainly be a devastating blow to the German Empire."
+worldnews.91.a:0 "This rebellion in Indochina reveals the weakness of Germany."
+worldnews.91.b:0 "German domination ends today. The Vietnamese people rise!"
+worldnews.91.c:0 "We will carpet bomb these Syndicalist rebels into oblivion!"
+worldnews.91.e:0 "The German Empire can't even stop Vietnamese rebels. Embarassing."
+worldnews.91.f:0 "Comrade Ho Chi Minh is the leader the Indochinese workers deserve."
+
+worldnews.92.t:0 "The Indochinese Revolt Succeeds"
+worldnews.92.d:0 "With the tenacity and fury of the Viet Minh troops driving German troops out of nearly all strategical points on the Indochinese peninsula, the German Foreign Office finally agreed to meet the leaders of the rebellion and offered fulll independence to the entire land they claim\n\nThus today, the creation of the Indochinese Union was confirmed by the Viet Minh, to the cheers of the Vietnamese people who had come to witness the historic event. The country's future is yet uncertain, but rumours of a Bharatiyan alignement are starting to spread through diplomatic channels as the world tries to measure the impact of this event on Asia."
+worldnews.92.a:0 "This may prove to be the final blow to German dominance in the East."
+worldnews.92.b:0 "Today, the Vietnamese people have their country. We are victorious!"
+worldnews.92.c:0 "We merely authorise their independence, they are not worth our time."
+worldnews.92.e:0 "Absolutely pathetic. Maybe we should strike Indochina later?"
+worldnews.92.f:0 "Let us hope this encourages the other workers of Asia to rise up."
+
+worldnews.93.t:0 "The Indochinese Revolution is Defeated"
+worldnews.93.d:0 "Despite ferocious guerilla warfare from the Viet Minh troops, the German army has managed to thwart the Syndicalist revolt in Indochina. Ho Chi Minh and many of his high-ranking Indochinese Syndicalist party members are assumed dead after an artilery barrage struck the Viet Minh command centre in Hanoi.\n\nHowever, there are also rumours of him being on a Long March towards Central Asia with some of his remaining troops. Whatever may be the case, the victorious zeal of the German colonial troops has turned violent, with many Vietnamese villages being 'checked for Syndicalist' agitators by German troops."
+worldnews.93.a:0 "Ho Chi Minh's disappearance cripples Syndicalism in Indochina."
+worldnews.93.b:0 "It cannot be! The Viet Minh will rise again! We will free our people!"
+worldnews.93.c:0 "No-one defies the German Empire and expects to live long!"
+worldnews.93.e:0 "Fair enough. Perhaps we should fund our own rebellion next time?"
+worldnews.93.f:0 "The struggle of the Asian worker against Imperialism has just begun!"
+
 ### City Fall Events ###
 
 worldnews.250.t:0 "-"
