To Yunnan we go

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -665,7 +665,7 @@ worldnews.92.e:0 "Absolutely pathetic. Maybe we should strike Indochina later?"
 worldnews.92.f:0 "Let us hope this encourages the other workers of Asia to rise up."
 
 worldnews.93.t:0 "The Indochinese Revolution is Defeated"
-worldnews.93.d:0 "Despite ferocious guerilla warfare from the Viet Minh troops, the German army has managed to thwart the Syndicalist revolt in Indochina. Ho Chi Minh and many of his high-ranking Indochinese Syndicalist party members are assumed dead after an artilery barrage struck the Viet Minh command centre in Hanoi.\n\nHowever, there are also rumours of him being on a Long March towards Central Asia with some of his remaining troops. Whatever may be the case, the victorious zeal of the German colonial troops has turned violent, with many Vietnamese villages being 'checked for Syndicalist agitators' by German troops."
+worldnews.93.d:0 "Despite ferocious guerilla warfare from the Viet Minh troops, the German army has managed to thwart the Syndicalist revolt in Indochina. Ho Chi Minh and many of his high-ranking Indochinese Syndicalist party members are assumed dead after an artilery barrage struck the Viet Minh command centre in Hanoi. However, there are also rumours of him being on a Long March towards Yunnan with some of his remaining troops.\n\nWhatever may be the case, the victorious zeal of the German colonial troops has turned violent, with many Vietnamese villages being 'checked for Syndicalist agitators' by German troops."
 worldnews.93.a:0 "Ho Chi Minh's disappearance cripples Syndicalism in Indochina."
 worldnews.93.b:0 "It cannot be! The Viet Minh will rise again! We will free our people!"
 worldnews.93.c:0 "No-one defies the German Empire and expects to live long!"
