fire_only_once fucks with direct calls for world events

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -93,7 +93,7 @@ worldnews.14.c:0 "Syndicalism shines a light of hope in such a dark world. Relat
 worldnews.14.e:0 "The Brusilov Offensive succeeding? Perhaps. But the Black Hundreds is a stretch!"
 
 worldnews.15.t:0 "Assassination of President Kerensky"
-worldnews.15.d:0 "Kerensky has just been shot and killed while on the way to the Senate! The assailant was taken down by the police, but the goals and intentions of the attacker are unknown. Despite his massive unpopularity among the Russian people due to botched land reform and ineffective rule, Kerensky was nevertheless able to hold the country together for years, and his death has thrown Russia into chaos. The Senators are already discussing a possible replacement to Kerensky, new coalitions are being formed, both between the left and the right, while military men like Denikin, Wrangel and Kornilov are just one step away from intervening to dissolve democracy and 'save Mother Russia'."
+worldnews.15.d:0 "Kerensky has just been shot and killed while on the way to the Senate! The assailant was taken down by the police, but the goals and intentions of the attacker are unknown. Despite his massive unpopularity among the Russian people due to botched land reform and ineffective rule, Kerensky was nevertheless able to hold the country together for years, and his death has thrown Russia into chaos.\n\nThe Senators are already discussing a possible replacement to Kerensky, new coalitions are being formed, both between the left and the right, while military men like Denikin, Wrangel and Kornilov are just one step away from intervening to dissolve democracy and 'save Mother Russia'."
 worldnews.15.a:0 "Let us hope Democracy survives in Russia."
 worldnews.15.b:0 "The Liberal Russian Republic will reform or perish."
 worldnews.15.c:0 "An opportunity arises for the Bolsheviks. Now, where in the world is Trotsky?"
@@ -263,7 +263,7 @@ worldnews.35.a:0 "Anarchists! Anarchists rule France! Need they say more?"
 worldnews.35.b:0 "It is not time for decentralisation. We need a strong French ally."
 worldnews.35.c:0 "The Anarchists will finally grant the people the autonomy they deserve."
 worldnews.35.e:0 "France has descended into literal anarchy then? So much for an indivisible nation."
-worldnews.35.f:0 "France has long been ruled as a centralised state. The Anarchistes will see to ending it."
+worldnews.35.f:0 "France has long been ruled as a centralised state. The Anarchistes will end that."
 
 worldnews.36.t:0 "Electoral Gridlock in France"
 worldnews.36.d:0 "The Commune of France is the world's leading Syndicalist nation, united as a federation of city communes and directed by the Comité de Salut Public, the chief executive. Ever since its inception, however, the Second Commune was not uniform in its policy, numerous factions arose, each one with their own idea of which path France should take. As the time for revenge against Germany and the World Revolution closes in, the election of 1936 is set to be important.\n\nIt was so important, in fact, that none of the four factions could acquire a majority. Much like before the election, a coalition must be found, but how will this change the shape of the Commune's politics? Only the men in the CSP itself know."
