added city capture news example

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -691,13 +691,17 @@ worldnews.252.c:0 "With such a victory on the Syndicalist traitors, the federal 
 worldnews.252.e:0 "This is a great relief. The Great Lakes, and America, will soon be secure again!"
 worldnews.252.f:0 "The workers of Chicago will soon meet head to head with American military police."
 
-worldnews.253.t:0 "The Fall of Washington" #CSA
-worldnews.253.d:0 "Syndicate militias have advanced towards and captured the symbolic capital of the United States, Washington D.C. They stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of the Syndicate States of America now flies over the U.S. Capitol.\n\nRumours are that Syndicate militias have been rounding up all political representatives they could find in the city to 'give them trial', although unconfirmed sources claim that important governmental figures have been evacuated during the battle, with their current whereabouts unknown."
+worldnews.253.t:0 "The Fall of Washington"
+worldnews.253.d:0 "[invader.GetAdjective] militias have advanced towards and captured the symbolic capital of the United States, Washington D.C. They stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of [invader.GetNameDef] now flies over the U.S. Capitol.\n\nRumours are that [invader.GetAdjective] militias have been rounding up all political representatives they could find in the city to 'give them trial', although unconfirmed sources claim that important governmental figures have been evacuated during the battle, with their current whereabouts unknown."
 worldnews.253.a:0 "We cannot let Reed and his Syndicalist mobs win. We must reorganise and push them out!"
 worldnews.253.b:0 "The central government has been thrown off its golden throne. Now we deal with the remnants."
 worldnews.253.c:0 "The Syndicalist traitors made it to Washington D.C. first. We need to take it back!"
 worldnews.253.e:0 "We might want to intervene. Now. The situation is urgent beyond measure!"
 worldnews.253.f:0 "Whoever controls Washington D.C. controls America. At least once the fighting is over."
+worldnews.253.g:0 "We cannot let Long and his Minutemen thugs lead our country."
+worldnews.253.h:0 "Washington D.C. is now in our hands! We will do the Founding Fathers proud."
+worldnews.253.i:0 "The reactionary Minutemen made it to Washington D.C. first. We need to take it back!"
+worldnews.253.j:0 "The situation is still stable, but Long is unpredictable."
 
 worldnews.254.t:0 "The Fall of Chicago" #US
 worldnews.254.d:0 "Minutemen militias have been pushing towards the Syndicate States' temporary capital of Chicago for a while now. Reports are now coming in of Chicago's capture by advancing Union troops. Reed's current whereabouts are unknown, but it is believed that he has fled the city with militia units.\n\nWidespread atrocities are being reported as Minutemen round up captured militia members and CSA activists to put them to the firing squad and many fires are spreading unchecked through the city's highrise districts. Is this the end of the Syndicate experiment in America?"
@@ -706,14 +710,6 @@ worldnews.254.b:0 "We are on your tail, Reed. You will hang high for what you've
 worldnews.254.c:0 "With such a victory on the Syndicalist traitors, the Minutemen will soon be upon us."
 worldnews.254.e:0 "At least the neighbouring Syndicalist threat has been eliminated, hopefully for good."
 worldnews.254.f:0 "The workers of Chicago will soon attend the Minutemen firing squads."
-
-worldnews.255.t:0 "The Fall of Washington" #CSA
-worldnews.255.d:0 "Minutemen militias have advanced towards and captured the symbolic capital of the United States, Washington D.C. They stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of the American Union States now flies over the U.S. Capitol.\n\nRumours are that Minutemen militias have been rounding up all political representatives they could find in the city to 'check their loyalty', although unconfirmed sources claim that important governmental figures have been evacuated during the battle, with their current whereabouts unknown."
-worldnews.255.a:0 "We cannot let Long and his Minutemen thugs lead our country."
-worldnews.255.b:0 "Washington D.C. is now in our hands! We will do the Founding Fathers proud."
-worldnews.255.c:0 "The reactionary Minutemen made it to Washington D.C. first. We need to take it back!"
-worldnews.255.e:0 "The situation is still stable, but Long is unpredictable."
-worldnews.255.f:0 "Whoever controls Washington D.C. controls America. At least once the fighting is over."
 
 worldnews.256.t:0 "The Fall of Atlanta" #CSA
 worldnews.256.d:0 "Syndicate militias have been pushing towards the American Union State's temporary capital of Atlanta for a while now. Reports are now coming in of Atlanta's capture by advancing Syndicate militias. Long's current whereabouts are unknown, but it is believed that he was rapidly evacuated to the countryside.\n\nDisturbing news report that Union representatives and Minutemen are being lynched by mobs in the street and that the city has been thoroughly sacked, with fires spreading through downtown areas. Is this the end of the Reactionary uprising in America?"
