Finish Washington event holy shit

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -692,16 +692,31 @@ worldnews.252.e:0 "This is a great relief. The Great Lakes, and America, will so
 worldnews.252.f:0 "The workers of Chicago will soon meet head to head with American military police."
 
 worldnews.253.t:0 "The Fall of Washington"
-worldnews.253.d:0 "[invader.GetAdjective] militias have advanced towards and captured the symbolic capital of the United States, Washington D.C. They stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of [invader.GetNameDef] now flies over the U.S. Capitol.\n\nRumours are that [invader.GetAdjective] militias have been rounding up all political representatives they could find in the city to 'give them trial', although unconfirmed sources claim that important governmental figures have been evacuated during the battle, with their current whereabouts unknown."
-worldnews.253.a:0 "We cannot let Reed and his Syndicalist mobs win. We must reorganise and push them out!"
-worldnews.253.b:0 "The central government has been thrown off its golden throne. Now we deal with the remnants."
-worldnews.253.c:0 "The Syndicalist traitors made it to Washington D.C. first. We need to take it back!"
-worldnews.253.e:0 "We might want to intervene. Now. The situation is urgent beyond measure!"
-worldnews.253.f:0 "Whoever controls Washington D.C. controls America. At least once the fighting is over."
-worldnews.253.g:0 "We cannot let Long and his Minutemen thugs lead our country."
-worldnews.253.h:0 "Washington D.C. is now in our hands! We will do the Founding Fathers proud."
-worldnews.253.i:0 "The reactionary Minutemen made it to Washington D.C. first. We need to take it back!"
-worldnews.253.j:0 "The situation is still stable, but Long is unpredictable."
+worldnews.253.csa.d:0 "Syndicate militias have advanced towards and captured the symbolic capital of the United States, Washington D.C. They stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of [invader.GetNameDef] now flies over the U.S. Capitol.\n\nRumours are that Syndicate militias have been rounding up all political representatives they could find in the city to 'give them trial', although unconfirmed sources claim that important governmental figures have been evacuated during the battle, with their current whereabouts unknown."
+worldnews.253.tex.d:0 "Minutemen militias have advanced towards and captured the symbolic capital of the United States, Washington D.C. They stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of [invader.GetNameDef] now flies over the U.S. Capitol.\n\nRumours are that Minutemen militias have been rounding up all political representatives they could find in the city to 'check their loyalty', although unconfirmed sources claim that important governmental figures have been evacuated during the battle, with their current whereabouts unknown."
+worldnews.253.cal.d:0 "[invader.GetAdjective] conscripts have advanced towards and captured the symbolic capital of the United States, Washington D.C. They stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of [invader.GetNameDef] now flies over the U.S. Capitol.\n\nThe aftermath has been relatively uneventful, with [invader.GetAdjective] representatives meeting with the general in charge of the push, although unconfirmed sources claim that important governmental figures have been evacuated during the battle, with their current whereabouts unknown."
+worldnews.253.can.d:0 "The [invader.GetAdjective] army has advanced towards and captured the symbolic capital of the United States, Washington D.C. They stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of [invader.GetNameDef] now flies over the U.S. Capitol.\n\nUnlike 1812, no mass arson have been committed but some government officials have been arrested by [invader.GetAdjective] Mounties for what the [invader.GetAdjective]s claim to be 'simple checks', although unconfirmed sources claim that important governmental figures have been evacuated during the battle, with their current whereabouts unknown."
+worldnews.253.mex.d:0 "The [invader.GetAdjective] army has advanced towards and captured the symbolic capital of the United States, Washington D.C. They stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of [invader.GetNameDef] now flies over the U.S. Capitol.\n\nThis has led to a major crackdown on the government officials there, with mass arrests reported and even rumours of summary executions in the Capitol itself, although unconfirmed sources claim that important governmental figures have been evacuated during the battle, with their current whereabouts unknown."
+worldnews.253.csa.a:0 "We cannot let Reed and his Syndicalist mobs win. We must reorganise and push them out!"
+worldnews.253.csa.b:0 "The central government has been thrown off its golden throne. Now we deal with the remnants."
+worldnews.253.csa.c:0 "The Syndicalist traitors made it to Washington D.C. first. We need to take it back!"
+worldnews.253.csa.e:0 "We might want to intervene. Now. The situation is urgent beyond measure!"
+worldnews.253.tex.a:0 "We cannot let Long and his Minutemen thugs lead our country."
+worldnews.253.tex.b:0 "Washington D.C. is now in our hands! We will do the Founding Fathers proud."
+worldnews.253.tex.c:0 "The reactionary Minutemen made it to Washington D.C. first. We need to take it back!"
+worldnews.253.tex.e:0 "The situation is still stable, but Long is unpredictable."
+worldnews.253.cal.a:0 "The Californians are way out of their place. We will fix this."
+worldnews.253.cal.b:0 "With control of Washington D.C., our independence is more than secure."
+worldnews.253.cal.c:0 "The Californians have some hubris, let's send them back West."
+worldnews.253.cal.e:0 "This is quite odd, but hopefully the Pacific States should still be receptive."
+worldnews.253.can.a:0 "Canada tries to repeat the War of 1812, but it had them pushed back!"
+worldnews.253.can.b:0 "Enough subtle nudges and influence games, we will fix America ourselves."
+worldnews.253.can.c:0 "The Canadians ignore history. America will kick the British out again."
+worldnews.253.mex.a:0 "The Mexican cannot win like this. We will push them back to the Rio Grande!"
+worldnews.253.mex.b:0 "It is time for us to restore our borders, we have largely won."
+worldnews.253.mex.c:0 "The Federal Government failed to protect our nation from Mexico. We won't."
+worldnews.253.mex.e:0 "This is a serious problem, we are going to have to intervene, probably."
+worldnews.253.common:0 "Whoever controls Washington D.C. controls America. At least once the fighting is over."
 
 worldnews.254.t:0 "The Fall of Chicago" #US
 worldnews.254.d:0 "Minutemen militias have been pushing towards the Syndicate States' temporary capital of Chicago for a while now. Reports are now coming in of Chicago's capture by advancing Union troops. Reed's current whereabouts are unknown, but it is believed that he has fled the city with militia units.\n\nWidespread atrocities are being reported as Minutemen round up captured militia members and CSA activists to put them to the firing squad and many fires are spreading unchecked through the city's highrise districts. Is this the end of the Syndicate experiment in America?"
@@ -1026,29 +1041,6 @@ worldnews.302.d:0 "Reports from Lisbon confirm that the Portuguese capital has b
 worldnews.302.a:0 "Portugal will not fall. We will fight to the last!"
 worldnews.302.b:0 "Portugal will be better off once we finally annex them."
 worldnews.302.c:0 "Spain might well become Iberia soon. A name change in order?."
-
-worldnews.303.t:0 "The Fall of Washington" #PSA
-worldnews.303.d:0 "Californian conscripts have advanced towards and captured the symbolic capital of the United States, Washington D.C. They stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of the Pacific States of America now flies over the U.S. Capitol.\n\nThe aftermath has been relatively uneventful, with Californian representatives meeting with the general in charge of the push, although unconfirmed sources claim that important governmental figures have been evacuated during the battle, with their current whereabouts unknown."
-worldnews.303.a:0 "The Californians are way out of their place. We will fix this."
-worldnews.303.b:0 "With control of Washington D.C., our independence is more than secure."
-worldnews.303.c:0 "The Californians have some hubris, let's send them back West."
-worldnews.303.e:0 "This is quite odd, but hopefully the Pacific States should still be receptive."
-worldnews.303.f:0 "Whoever controls Washington D.C. controls America. At least once the fighting is over."
-
-worldnews.304.t:0 "The Fall of Washington" #Canada
-worldnews.304.d:0 "The Canadian army has advanced towards and captured the symbolic capital of the United States, Washington D.C. They stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of Canada now flies over the U.S. Capitol.\n\nUnlike 1812, no mass arson have been committed but some government officials have been arrested by Canadian Mounties for what the Canadians claim to be 'simple checks', although unconfirmed sources claim that important governmental figures have been evacuated during the battle, with their current whereabouts unknown."
-worldnews.304.a:0 "Canada tries to repeat the War of 1812, but it had them pushed back!"
-worldnews.304.b:0 "Enough subtle nudges and influence games, we will fix America ourselves."
-worldnews.304.c:0 "The Canadians ignore history. America will kick the British out again."
-worldnews.304.e:0 "Whoever controls Washington D.C. controls America. At least once the fighting is over."
-
-worldnews.305.t:0 "The Fall of Washington" #Mexico
-worldnews.305.d:0 "The Mexican army has advanced towards and captured the symbolic capital of the United States, Washington D.C. They stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of Mexico now flies over the U.S. Capitol.\n\nThis has led to a major crackdown on the government officials there, with mass arrests reported and even rumours of summary executions in the Capitol itself, although unconfirmed sources claim that important governmental figures have been evacuated during the battle, with their current whereabouts unknown."
-worldnews.305.a:0 "The Mexican cannot win like this. We will push them back to the Rio Grande!"
-worldnews.305.b:0 "It is time for us to restore our borders, we have largely won."
-worldnews.305.c:0 "The Federal Government failed to protect our nation from Mexico. We won't."
-worldnews.305.e:0 "This is a serious problem, we are going to have to intervene, probably."
-worldnews.305.f:0 "Whoever controls Washington D.C. controls America. At least once the fighting is over."
 
 worldnews.306.t:0 "The Fall of Denver" #PSA
 worldnews.306.d:0 "Californian conscripts have been fighting long, difficult skirmishes with the Federal Government across the Rockies. Today, their efforts are crowned as they finally descended on the city of Denver after a large scale assault across the South Platte River, Denver being the capital of Colorado and the main Federal stronghold in the Great Plains.\n\nThe fall of the Queen City of the Plains indeed seems to be a major upset for the future of the United States, and as fighting dies down in the South Platte valley, many experts agree that the Federal government is now almost certain to come to terms with the Californians."
