pushing stuff before it gets overwritten again

--- a/localisation/KR_Austria_Ausgleich_new_l_english.yml
+++ b/localisation/KR_Austria_Ausgleich_new_l_english.yml
@@ -5,14 +5,24 @@ ausgleich.new.101.t:0 "An Invitation to the Ausgleich"
 ausgleich.new.102.t:0 "Hungary agrees to attend"
 
 ausgleich.new.200.t:0 "Invite others to the Ausgleich?"
+ausgleich.new.200.d:0 "Since 1922, there have been quintanual small Ausgleichs between Austria and Bohemia, Galicia and Illyria. We could turn this into one bigger Ausgleich. Also, gathering delegations from all of Austria-Hungary's corners might help mediate some of the internal tensions that have been going on since the Weltkrieg has ended."
 ausgleich.new.200.a:0 "No way. This is between us and the Magyars."
 ausgleich.new.200.b:0 "You are right. Invite the Bohemians, Galicians and Illyrians."
 ausgleich.new.200.c:0 "We need to think bigger. Invite all peoples of the Dual Monarchy."
+
 ausgleich.new.201.t:0 "Other Nations at the Ausgleich"
+ausgleich.new.201.a:0 "This is an outrage. Formally protest their decision."
+ausgleich.new.201.b:0 "Just protesting is not enough. We shall not take part in such an Ausgleich."
+ausgleich.new.201.c:0 "We must go with the times."
+
 ausgleich.new.202.t:0 "An Invitation to the Ausgleich"
+ausgleich.new.202.a:0 "What an honour."
 ausgleich.new.203.t:0 "An Invitation to the Ausgleich"
+ausgleich.new.203.a:0 "What an honour."
 ausgleich.new.204.t:0 "An Invitation to the Ausgleich"
+ausgleich.new.204.a:0 "What an honour."
 ausgleich.new.205.t:0 "Hungary protests other Delegations"
+ausgleich.new.205.a:0 "It's the way forward."
 ausgleich.new.206.t:0 "Bohemia agrees to attend"
 ausgleich.new.207.t:0 "Galicia agrees to attend"
 ausgleich.new.208.t:0 "Illyria agrees to attend"
@@ -134,3 +144,9 @@ ausgleich.new.364.t:0 "Romanian demonstrations put down in Hungary"
 ausgleich.new.366.t:0 "Austria demands our Authorities to evacuate Slovakia and Transylvania"
 ausgleich.new.367.t:0 "Austria demands our Authorities to evacuate Slovakia"
 ausgleich.new.368.t:0 "Austria demands our Authorities to evacuate Transylvania"
+
+ausgleich.new.370.t:0 "Hungary has left the disputed territories"
+ausgleich.new.371.t:0 "Hungary refuses to leave the disputed territories"
+ausgleich.new.372.t:0 "Austria declares war over disputed territories"
+ausgleich.new.373.t:0 "Declaration of the Slovak State"
+ausgleich.new.374.t:0 "Declaration of the Transylvanian State"
