--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -249,22 +249,6 @@ valtion_company:0 "Valtion Lentokonetehdas"
 veljekset_karhumaki:0 "Veljekset Karhumaki"
 crichton_vulcan:0 "Crichton-Vulcan"
 
-### Flanders Wallonia ###
-cockerill:0 "Cockerill"
-societe_belge_radio:0 "Société Belge Radio-électrique"
-solvay:0 "Solvay"
-fabrique_nationale:0 "Fabrique Nationale"
-fonderie_royale_canons:0 "Fonderie Royale de Canons"
-imperia:0 "Imperia Automobiles"
-minerva:0 "Minerva"
-familleureux:1 "Familleureux"
-la_brugeoise:0 "La Brugeoise"
-renard:0 "Renard"
-avions_fairey:0 "Avions Fairey"
-sabca:0 "SABCA"
-stampe_vertongen:0 "Stampe et Vertongen"
-boel_zonen:0 "J. Boel & Zonen"
-
 ### Galicia ###
 clb:0 "CLB"
 uniwersytet_jagiellonski:0 "Uniwersytet Jagielloński"
@@ -891,7 +875,7 @@ Kaiserliche_werft_wilhelmshaven:0 "Kaiserliche Werft Wilhelmshaven"
 schichau_werke:0 "Schichau-Werke"
 vulcan_stettin:0 "AG Vulcan Stettin"
 
-###flanders-wallonia ###
+###Flanders-wallonia ###
 cockerill:0 "Cockerill"
 societe_belge_radio:0 "Société Belge Radio-électrique"
 solvay:0 "Solvay"
@@ -912,9 +896,9 @@ brossel:0 "Brossel"
 miesse:0 "Miesse"
 cockerill_scheepwerfen:0 "Cockerill Scheepwerfen"
 
-###wallonia ###
+###Wallonia ###
 cockerill_WLL:0 "Cockerill"
-acec_WLL:0 "Ateliers de constructions électriques de Charleroi"
+acec_WLL:0 "Ateliers de Constructions Électriques de Charleroi"
 societe_belge_radio_WLL:0 "Société Belge Radio-électrique"
 
 fabrique_nationale_WLL:0 "Fabrique Nationale"
