A few more changes to Ireland

--- a/localisation/KR_Ireland_l_english.yml
+++ b/localisation/KR_Ireland_l_english.yml
@@ -727,6 +727,8 @@ IRE_ATC:0 "Atlantic Trade Commission"
 IRE_ATC_desc:0 "Irish-American relations are now stronger than ever, and now perhaps we can propose a commission to oversee our trade in the Atlantic."
 IRE_WASHINGTON:0 "A Friend in Washington"
 IRE_WASHINGTON_desc:0 "With Ireland having traded with and Irish volunteers having fought alongside America during the Second American Civil War we can now persuade the Americans to upgrade our economic friendship to a political one through a non-aggression pact and guarantee of our independence."
+IRE_USTECHGROUP:0 "Join the University of the Free World"
+IRE_USTECHGROUP_desc:0 "The Americans have created the University of the Free World, a society in which America and its allies cooperate and share research and technology to aid all countries involved. Now that we are allied with America we can join the society."
 
 IRE_COALITION:0 "The Irish-American Coalition"
 IRE_COALITION_desc:0 "Now that Ireland and America are friends on the political as well as economic stage and America is beginning to recover and make its way to becoming a world power again, we should consider a full alliance with them."
